--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Odin recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>A guide to a tasty food coma!</h1>
 
         <p>Here's a short page on some of <strong> my favorite</strong> recipes and how to make them!</p>
 
