removed spicy_chicken_burger.html, added buddha_bowl.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
         <li><a href="recipes/burrito.html">Burrito</a></li>
         <li><a href="recipes/roast_duck_bao.html">Roast duck bao</a></li>
-        <li><a href="recipes/spicy_chicken_burger.html">Spicy chicken panko burger</a></li>
+        <li><a href="recipes/buddha_bowl.html">Buddha Bowl</a></li>
         </ul>
 
     </body>
