added ingredients and equipment to bao page

--- a/recipes/roast_duck_bao.html
+++ b/recipes/roast_duck_bao.html
@@ -13,6 +13,40 @@
         This is a recipe for one of my favorite treats, the hoisin duck bao, originating from vietnam and is now a classic pan asian dish around the world. Served in restaurants, food stalls or in your own kitchen!</p>
         <p><em>Fun fact, a lot of people call them bao buns but don't realise the word bao means bun, so don't go into a pan asian restaurant and ask for a bun bun!</em></p>
 
+        <h2>Ingredients</h2>
+        <ul>
+            <strong>Bao's</strong>
+            <li>130g plain flour, extra for the workbench</li>
+            <li>1 tsp caster sugar</li>
+            <li>1/4 tsp fast-action dried yeast</li>
+            <li>1 tbsp whole milk</li>
+            <li>1 tsp oil</li>
+            <li>1 tsp rice vinegar <em>(more needed for hoisin below)</em></li>
+            <li>1/4 tsp baking power</li>
+            <strong>Hoisin sauce</strong>
+            <li>35g dark brown soft sugar</li>
+            <li>2 tbsp black bean sauce</li>
+            <li>1 1/2 tsp rice vinegar</li>
+            <li>1/4 tsp sesame oil</li>
+            <li>1/8 tsp Chinese five spice</li>
+            <strong>Crispy duck</strong>
+            <li>Aromatic 1/2 crispy duck</li>
+            <li>1 carrot</li>
+            <li>2 sping onions</li>
+            <li>1 red chilli</li>
+            <li>corriander leaves</li>
+            <li>sesame seeds <em>(optional)</em></li>
+        </ul>
+
+        <ul>
+            <strong>Equipment</strong>
+            <li>6 wooden chopsticks (brush them with oil)</li>
+            <li>8cm squares of baking paper x6</li>
+            <li>proving bag</li>
+            <li>bamboo steamer (2-tiered)</li>
+        </ul>
+
+        
         <h2>Directions</h2>
 
         <ul>
@@ -35,7 +69,7 @@
             <li><strong>Step 9</strong></li>
             After cooking the duck for 25 mins bring a large pan of water to the boil and carefully slide the chopsticks out of the bao's and place 3 bao's on their squares of baking paper into each level of the bamboo steamer. Place the steamer over the simmering water and steam for 8-10 minutes, or until the buns are puffed up and cooked through.
             <li><strong>Step 10</strong></li>
-            Shred the roasted duck and mix in the hoisin sauce with 2 tablespoons. The delicate part... open each bao carefully without splitting it and fill with duck, cucumber, spring onion and chilli if you want a bit of spice. Sesame seads are also great sprinkled on the top!
+            Shred the roasted duck and mix in the hoisin sauce with 2 tablespoons. The delicate part... open each bao carefully without splitting it and fill with duck, cucumber, spring onion, coriander leaves and chilli if you want a bit of spice. Sesame seads are also great sprinkled on the top!
             <li><strong>Final step!</strong></li>
             Dig in and enjoy with your desired tipple!
         </ul>
