amended buddha homepage link to include button

--- a/recipes/buddha_bowl.html
+++ b/recipes/buddha_bowl.html
@@ -44,7 +44,7 @@
             <li>divide rice among four bowls and top each with sweet potato mixture, chicken, avocado and baby spinach. Sprinkle with cilantro and sesame seeds and drizzle with the amazing dressing before serving.</li>
         </ol>
 
-        <a href="../index.html">Homepage</a>
+        <button><a href="../index.html">Homepage</a></button>
 
     </body>
 </html>
