added pictures on index page of recipes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <h1>A guide to a tasty food coma!</h1>
 
+        <img src="./images/spicy_burrito.jpg" alt="Chicken burrito" height="300px" width="400px">
+        <img src="./images/bao-bun.jpg" alt="Roast duck bao" height="300px" width="400px">
+        <img src="./images/buddha_bowl.jpg" alt="Buddha bowl" height="300px" width="400px">
+
         <p>Here's a short page on some of <strong> my favorite</strong> recipes and how to make them!</p>
 
         <ul>
