--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <body>
         <h1>A guide to a tasty food coma!</h1>
 
+        <a href="./recipes/burrito.html">
         <img src="./images/spicy_burrito.jpg" alt="Chicken burrito" height="300px" width="400px">
+        </a>
+
+        <a href="./recipes/roast_duck_bao.html">
         <img src="./images/bao-bun.jpg" alt="Roast duck bao" height="300px" width="400px">
+        </a>
+
+        <a href="./recipes/buddha_bowl.html">
         <img src="./images/buddha_bowl.jpg" alt="Buddha bowl" height="300px" width="400px">
+        </a>
+
+        <!--Should I add the above images under each list item???-->
 
         <p>Here's a short page on some of <strong> my favorite</strong> recipes and how to make them!</p>
 
