added buttons on all pages to return to top of page

--- a/recipes/buddha_bowl.html
+++ b/recipes/buddha_bowl.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Peanut Butter Topped Buddha Bowl</h1>
+        <h1 id="header">Peanut Butter Topped Buddha Bowl</h1>
         <img src="../images/buddha_bowl.jpg" alt="Buddha bowl" height="500px" width="500px">
 
         <p>The beauty of buddha bowls are you can adapt them to however you please, adding or removing pretty much anything and it always still seems to be delicious!<br>I'm a big fan of peanut butter so this is a different twist to your regular buddha bowl that usually contains chickpeas, instead we will be using rice.</p>
@@ -45,6 +45,7 @@
         </ol>
 
         <button><a href="../index.html">Homepage</a></button>
+        <button><a href="#header">Return to top</a></button>
 
     </body>
 </html>
