--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Spicy chicken burrito</h1>
+        <h1 id="header">Spicy chicken burrito</h1>
 
         <img src="../images/spicy_burrito.jpg" alt="Chicken burrito" height="500px" width="1000px">
 
@@ -59,6 +59,7 @@
         This recipe serves 6 portions.</p>
 
         <button><a href="../index.html">Homepage</a></button>
-
+        <button><a href="#header">Return to top</a></button>
+        
     </body>
 </html>
