--- a/recipes/roast_duck_bao.html
+++ b/recipes/roast_duck_bao.html
@@ -5,7 +5,7 @@
         <title>Roast duck bao</title>
     </head>
     <body>
-        <h1>Roast duck bao</h1>
+        <h1 id="header">Roast duck bao</h1>
         <img src="../images/bao-bun.jpg" alt="duck bao">
 
         <p><em>Bao down to the bao!</em> <br>
@@ -46,7 +46,7 @@
             <li>bamboo steamer (2-tiered)</li>
         </ul>
 
-        
+
         <h2>Directions</h2>
 
         <ul>
@@ -75,6 +75,7 @@
         </ul>
 
         <button><a href="../index.html">Return to home</a></button>
+        <button><a href="#header">Return to top</a></button>
 
         <a href="https://thegreatbritishbakeoff.co.uk/recipes/all/paul-hollywood-steamed-bao-buns-with-crispy-duck/"></a>
 
