--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <h1>A guide to a tasty food coma!</h1>
