linked burrito style sheet

--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -3,17 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Burrito</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1 id="header">Spicy chicken burrito</h1>
 
-        <img src="../images/spicy_burrito.jpg" alt="Chicken burrito" height="500px" width="1000px">
+        <center><img id="img" src="../images/spicy_burrito.jpg" alt="Chicken burrito" height="500px" width="1000px"></center>
 
-        <p>Spicy chicken burritos are incredibly tasty and also very easy to make! <br>
+        <p id="p">Spicy chicken burritos are incredibly tasty and also very easy to make! <br>
         You have the choice of eating it hot or cold which is great if you're fancing something nice the next day for your work dinner.</p>
 
         <strong>Please see notes section at the bottom of the page prior to starting!</strong>
+
+        <div id="ingredients">
 
         <h2>Ingredients</h2>
         <ul>
@@ -33,6 +36,10 @@
             <li>250g grated cheese</li>
         </ul>
 
+        </div>
+
+        <div id="instructions">
+
         <h2>Instructions</h2>
         <ol>
             <li>Heat the oil to medium temperature in a skillet.</li>
@@ -46,6 +53,10 @@
             <li>Shred the chicken</li>
         </ol>
 
+        </div>
+
+        <div id="pit">
+
         <h2>Putting it together</h2>
         <ol>
         <li>Divide the shredded chicken onto the tortillas</li>
@@ -54,12 +65,18 @@
         <li>Wrap, serve and devour!</li>
         </ol>
 
+        </div>
+
+        <div id="notes">
+
         <h2>Notes</h2>
         <p>If you were making the tortillas to eat hot roast the chicken according to the package instructions prior to starting the beginning setps. <br> * If serving cold burritos allow sauce to cool before covering. <br>
         This recipe serves 6 portions.</p>
 
-        <button><a href="../index.html">Homepage</a></button>
-        <button><a href="#header">Return to top</a></button>
+        </div>
+
+        <button id="homepage"><a href="../index.html">Homepage</a></button>
+        <button id="return"><a href="#header">Return to top</a></button>
         
     </body>
 </html>
