changed format of recipe pages

--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -14,9 +14,9 @@
         <p id="p">Spicy chicken burritos are incredibly tasty and also very easy to make! <br>
         You have the choice of eating it hot or cold which is great if you're fancing something nice the next day for your work dinner.</p>
 
-        <strong>Please see notes section at the bottom of the page prior to starting!</strong>
+        <p id="warning"><strong>Please see notes section at the bottom of the page prior to starting!</strong></p>
 
-        <div id="ingredients">
+        <div>
 
         <h2>Ingredients</h2>
         <ul>
@@ -36,10 +36,6 @@
             <li>250g grated cheese</li>
         </ul>
 
-        </div>
-
-        <div id="instructions">
-
         <h2>Instructions</h2>
         <ol>
             <li>Heat the oil to medium temperature in a skillet.</li>
@@ -53,10 +49,6 @@
             <li>Shred the chicken</li>
         </ol>
 
-        </div>
-
-        <div id="pit">
-
         <h2>Putting it together</h2>
         <ol>
         <li>Divide the shredded chicken onto the tortillas</li>
@@ -67,13 +59,9 @@
 
         </div>
 
-        <div id="notes">
-
         <h2>Notes</h2>
         <p>If you were making the tortillas to eat hot roast the chicken according to the package instructions prior to starting the beginning setps. <br> * If serving cold burritos allow sauce to cool before covering. <br>
         This recipe serves 6 portions.</p>
-
-        </div>
 
         <button id="homepage"><a href="../index.html">Homepage</a></button>
         <button id="return"><a href="#header">Return to top</a></button>
