--- a/recipes/roast_duck_bao.html
+++ b/recipes/roast_duck_bao.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Roast duck bao</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
+
     <body>
         <h1 id="header">Roast duck bao</h1>
-        <img src="../images/bao-bun.jpg" alt="duck bao">
+        <center><img src="../images/bao-bun.jpg" alt="duck bao"></center>
 
-        <p><em>Bao down to the bao!</em> <br>
+        <p id="p"><em>Bao down to the bao!</em> <br>
             <br>
         This is a recipe for one of my favorite treats, the hoisin duck bao, originating from vietnam and is now a classic pan asian dish around the world. Served in restaurants, food stalls or in your own kitchen!</p>
-        <p><em>Fun fact, a lot of people call them bao buns but don't realise the word bao means bun, so don't go into a pan asian restaurant and ask for a bun bun!</em></p>
+        <p id="p"><em>Fun fact, a lot of people call them bao buns but don't realise the word bao means bun, so don't go into a pan asian restaurant and ask for a bun bun!</em></p>
+
+        <div>
 
         <h2>Ingredients</h2>
         <ul>
@@ -74,8 +78,10 @@
             Dig in and enjoy with your desired tipple!
         </ul>
 
-        <button><a href="../index.html">Return to home</a></button>
-        <button><a href="#header">Return to top</a></button>
+        </div>
+
+        <button id="homepage"><a href="../index.html">Return to home</a></button>
+        <button id="return"><a href="#header">Return to top</a></button>
 
         <a href="https://thegreatbritishbakeoff.co.uk/recipes/all/paul-hollywood-steamed-bao-buns-with-crispy-duck/"></a>
 
