--- a/recipes/buddha_bowl.html
+++ b/recipes/buddha_bowl.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Buddha bowl</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1 id="header">Peanut Butter Topped Buddha Bowl</h1>
-        <img src="../images/buddha_bowl.jpg" alt="Buddha bowl" height="500px" width="500px">
+        <center><img src="../images/buddha_bowl.jpg" alt="Buddha bowl" height="500px" width="500px"></center>
 
-        <p>The beauty of buddha bowls are you can adapt them to however you please, adding or removing pretty much anything and it always still seems to be delicious!<br>I'm a big fan of peanut butter so this is a different twist to your regular buddha bowl that usually contains chickpeas, instead we will be using rice.</p>
+        <p id="p">The beauty of buddha bowls are you can adapt them to however you please, adding or removing pretty much anything and it always still seems to be delicious!<br>I'm a big fan of peanut butter so this is a different twist to your regular buddha bowl that usually contains chickpeas, instead we will be using rice.</p>
 
-        <p>This recipe serves 4, prep time 10 minutes, cooking time 30 minutes, total 40 minutes!</p>
+        <p id="warning">This recipe serves 4, prep time 10 minutes, cooking time 30 minutes, total 40 minutes!</p>
+
+        <div>
 
         <h2>Ingredients / prep</h2>
         <ul>
@@ -44,8 +47,10 @@
             <li>divide rice among four bowls and top each with sweet potato mixture, chicken, avocado and baby spinach. Sprinkle with cilantro and sesame seeds and drizzle with the amazing dressing before serving.</li>
         </ol>
 
-        <button><a href="../index.html">Homepage</a></button>
-        <button><a href="#header">Return to top</a></button>
+        </div>
+
+        <button id="homepage"><a href="../index.html">Homepage</a></button>
+        <button id="return"><a href="#header">Return to top</a></button>
 
     </body>
 </html>
